Fake data generator

--- a/AdaptiveWpfLayout/AdaptiveWpfLayout.csproj
+++ b/AdaptiveWpfLayout/AdaptiveWpfLayout.csproj
@@ -74,6 +74,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="Services\PersonsGenerator.cs" />
     <Page Include="DetailUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
