--- a/AdaptiveWpfLayout/AdaptiveWpfLayout.csproj
+++ b/AdaptiveWpfLayout/AdaptiveWpfLayout.csproj
@@ -75,6 +75,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="Models\DemoPerson.cs" />
     <Compile Include="Services\PersonsGenerator.cs" />
     <Page Include="DetailUC.xaml">
       <SubType>Designer</SubType>
@@ -131,6 +132,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Face.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.3.0.3\build\Fody.targets" Condition="Exists('..\packages\Fody.3.0.3\build\Fody.targets')" />
